# linren

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile
shaders/: line.frag  line.vert
src/: color.h  glwindow.cpp  glwindow.h  linerenderer.cpp  linerenderer.h  main.cpp  vec2.h
